SUBDIRS = libgnomeprint filters tests data po doc

EXTRA_DIST = \
    MAINTAINERS \
    ChangeLog \
    ChangeLog.old \
    ChangeLog.old.2 \
    OChangeLog.gpa.2002-12-17 \
    intltool-extract.in \
    intltool-merge.in \
    intltool-update.in \
    config.h.win32	\
    libgnomeprint-zip.in \
    BUGS \
    gtk-doc.make

DISTCLEANFILES=intltool-extract intltool-merge intltool-update
